css/base.scss
/* ... */
.about-this-site .ui.header img {
  width: 128px;
  margin-bottom: 1rem;
}

.p-logo {
  height: 20px;
  width: auto;
  vertical-align: text-top;
}

.ui.list.artwork-list {
  >.item a.header, >.item a.header {
    //color: $link-color !important;

    &:hover {
      color: $orange !important;
    }
  }
}

.ui.footer {
  background: rgba(255,255,255,0.7);
  margin: 0;
  border-bottom: 10px solid $green-light;
  padding: 1.4rem 2rem 1rem;

  p {
    margin: 0;
    line-height: 1.8;

    &.stats {
      margin-top: 1rem;
      line-height: 1;
    }

    &.version {
      font-size: 0.88rem;
      color: $gray-lighter;
    }
  }
}

#show-disclaimer {
  cursor: pointer;
}

.disclaimer {
  p {
    font-size: 1.067rem;
  }
}

.remember-this {
  color: #8aff8a;
  font-weight: bold;
}

.super-important {
  color: #ea7878;
  font-weight: bold;
}

//
// Mobile breakpoint
//

@media(max-width: 767px) {

  .fab {
    right: -12px;
  }

  .desktop-table {
    display: none;
  }

  .ui.container {
    margin: 0!important;
    border-width: 3px 0;
  }

  #top-header {
    padding: 0;

    .title-wrap {
      width: 100%;
      border-width: 3px 0;
      border-radius: 0;

      h1 {
        border-radius: 0;
        padding: 0 20px;
        font-size: 2em;
      }

      .inner-title {
        padding: 15px 0;
      }

      #search-wrapper {
        label {
          left: 3.3%;
        }
        input[type=search] {
          padding: 10px;
        }
      }

      h2 {
        border-radius: 0;
      }

      .title-footer {
        border-radius: 0;

        a {
          margin: 1rem 0;
          display: block;
          border-radius: 0;
          width: 100%;
          padding: 0.25rem 0 0;

          &:first-child {
            border-bottom: 1px solid $gray;
            padding: 0 0 1rem;
          }
        }
      }
    }

    .bch-only {
      padding: 0;

      #search-wrapper {
        border: 0;
        padding: 11px 0;

        label:not(.z-switch) {
          margin-bottom: 10px;
          position: initial;

          input[type=search] {
            width: 90%;
            padding: 10px 10px 10px 40px;
          }
        }

        i.icon.search {
          top: 14px;
          left: 32px;
        }

        button#search-clear {
          top: 14px;
          right: 24px;
        }

        .z-switch {
          float: none;
          position: initial;
          white-space: normal;
          line-height: 1;

          .z-switch--container {
            display: block;
            margin: 0 auto 10px;
          }
        }
      }

      &.fixto-fixed {
        padding: 0 11px;
        border-width: 0 0 2px;
        border-radius: 0;
        box-shadow: 0 0px 32px rgba(50, 123, 158, 0.888);

        #search-wrapper {
          .search-input-wrapper {
            display: block;
            float: none;
          }

          label:not(.z-switch) {
            text-align: center;
            font-size: 1rem;

            input[type=search] {
              width: 100%;
              margin: 0 0 8px;
            }

            &:not(.z-switch) {
              float: none;
            }
          }

          i.icon.search {
            top: 11px;
            left: 11px;
          }

          button#search-clear {
            top: 11px;
            right: 6px;
          }

          .z-switch {
            white-space: normal;
            line-height: 1;
            font-size: 0.9rem;

            .z-switch--container {
              float: left;
              margin: 3px 10px 0 0;
            }
          }
        }
      }
    }
  }

  .mobile-table {
    display: block;
    width: 95vw;
  }

  .category {
    h5.ui.icon.header {
      width: 100%;
      text-align: left;
      margin: 0;

      i.circular.icon {
        display: inline-block;
        margin: 0;
        padding: 0.35em !important;
        width: 1.7em !important;
        height: 1.7em !important;
      }

      small {
        position: relative;
        top: 3px;
        padding: 16px 10px;
        font-size: 1.2rem;
      }
    }
  }

  .asset-intro {
    float: none;
    width: 98%;
    margin: 0 1%;
    padding: 0 0.9rem;
  }

  .ui.modal .content>.description {
    padding: 0 !important;
  }

  .ui.grid.container {
    border-width: 3px 0;
  }

  .ui.three.buttons {
    flex-direction: column;

    > .button {
      width: 100%;
      margin: 1px 0 0;
      border-radius: 0 !important;
    }
  }

  .ui.list .list>.item>.icon+.content, .ui.list .list>.item>.image+.content, .ui.list>.item>.icon+.content, .ui.list>.item>.image+.content {
    padding: 0.65rem 0;
  }

  .ui.list.artwork-list {
    float: none;
    width: 100%;
    margin-top: 2rem;
  }

  .ui.progress.bch-progress {
    margin: 1rem 1rem 5rem !important;

    .bar .progress {
      right: 0.15rem;
    }

    .label {
      margin-top: 0.7rem;
      font-size: 1.4rem;
      letter-spacing: -1px;
      line-height: 1.2;
    }
  }

  .ticker {
    #ticker_value {
      li {
        display: block;
        margin: 2rem;

        &:first-child {
          margin-top: 0;
          padding-top: 2rem;
        }

        &:last-child {
          margin-bottom: 0;
          padding-bottom: 2rem;
        }
      }
    }
  }

  .ui.subfooter {
    padding: 2em 0 0;

    .inner {
      .ui.huge.button, .ui.huge.buttons .button, .ui.huge.buttons .or {
        font-size: 1rem;
      }

      .ui.buttons .or {
         top: 0;
      }
    }
  }

  .asset-panel {
    padding-bottom: 1rem;

    p {
      margin-bottom: 1rem;
    }

    > a {
      padding: 1rem;
      font-size: 1.4rem;
      text-align: center;

      i {
        display: block;
        font-size: 3rem;
        margin: 0 auto;
      }
    }
  }

  .assets {
    text-align: center;
  }
}

@media screen and (min-width: 768px) {
  #top-header .title-wrap .inner-title .sub.header:first-of-type {
    font-size: 1.3rem;
    padding: 65px 55px 0;
  }
}
/* ... */

